set up descriptor test and get to pass

--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
     <footer>
         <p>&copy; Paleopuffs 2019</p>
     </footer>
+    <script type="module" src="../src/quiz/quiz.js"></script>
 </body>
 </html>
