get all form data in quiz.js

--- a/index.html
+++ b/index.html
@@ -41,25 +41,25 @@
             </fieldset>
             <fieldset id="color-test">
                     <p>Which is your favorite color?</p>
-                    <label for="red">Loyal</label>
+                    <label for="red">Red</label>
                         <input
                             type="radio"
                             name="color"
                             value="red"
                         >
-                        <label for="green">Cunning</label>
+                        <label for="green">Green</label>
                         <input
                             type="radio"
                             name="color"
                             value="green"
                         >
-                        <label for="blue">Intellectual</label>
+                        <label for="blue">Blue</label>
                         <input
                             type="radio"
                             name="color"
                             value="blue"
                         >
-                        <label for="yellow">Earnest</label>
+                        <label for="yellow">Yellow</label>
                         <input
                             type="radio"
                             name="color"
@@ -68,28 +68,28 @@
                 </fieldset>
                 <fieldset id="animal-test">
                         <p>Which is your favorite animal?</p>
-                        <label for="owl">Loyal</label>
+                        <label for="owl">Owl</label>
                             <input
                                 type="radio"
-                                name="word"
+                                name="animal"
                                 value="owl"
                             >
-                            <label for="rat">Cunning</label>
+                            <label for="rat">Rat</label>
                             <input
                                 type="radio"
-                                name="word"
+                                name="animal"
                                 value="rat"
                             >
-                            <label for="lion">Intellectual</label>
+                            <label for="lion">Lion</label>
                             <input
                                 type="radio"
-                                name="word"
+                                name="animal"
                                 value="lion"
                             >
-                            <label for="snake">Earnest</label>
+                            <label for="snake">Snek</label>
                             <input
                                 type="radio"
-                                name="word"
+                                name="animal"
                                 value="snake"
                             >
                     </fieldset>
